# bottlerocket-core-kit

./: .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  Makefile  Twoliter.toml
.github/workflows/: validate-changelog.yml
advisories/3.1.4/: BRSA-0hz1ashhuthf.toml  BRSA-a8saejq9c4ul.toml  BRSA-jr1scivexljd.toml  BRSA-khvn4nh2ukbb.toml  BRSA-w7yqxdlauzyr.toml  BRSA-yhcguys2vixo.toml
advisories/3.2.0/: BRSA-tn9tn492mklj.toml
advisories/3.3.0/: BRSA-udcwjbo4nlwj.toml
advisories/3.3.1/: BRSA-plp2gkokhcuk.toml  BRSA-r1pp3ifrqlrj.toml  BRSA-rmht97wx4535.toml  BRSA-rz4jhrkccvad.toml
advisories/4.0.0/: BRSA-u9kwccsbt96l.toml
advisories/4.1.0/: BRSA-cbg7nhxhibmz.toml  BRSA-fes8wtslzjru.toml
advisories/staging/: BRSA-u9kwccsbt96l.toml
kits/bottlerocket-core-kit/: Cargo.toml
sources/: Cargo.toml  clarify.toml  deny.toml
sources/api/: openapi.yaml
sources/api/apiclient/: Cargo.toml  README.md  README.tpl
sources/api/apiserver/: Cargo.toml
sources/api/datastore/: Cargo.toml
sources/api/pluto/: Cargo.toml
sources/api/pluto/src/: ec2.rs  eks.rs  main.rs
sources/api/sundog/: Cargo.toml
sources/aws-smithy-experimental/: Cargo.toml
sources/aws-smithy-experimental/src/: hyper_1_0.rs
sources/bootstrap-commands/src/: main.rs
sources/cfsignal/: Cargo.toml
sources/cfsignal/src/: cloudformation.rs
sources/constants/src/: lib.rs
sources/host-ctr/: go.mod  go.sum
sources/imdsclient/src/: lib.rs
sources/models/: Cargo.toml
sources/models/src/: generator.rs  lib.rs
sources/pciclient/: Cargo.toml
tools/: validate-changelog.sh
(+28 files in other folders)
